--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   <title>Batman</title>
-  <link rel="icon" href="/profile.webp">
+  <link rel="icon" href="/batman.jpg">
 </head>
 
 <body>
